# athena

./: README.md
athena/: CMakeLists.txt  package.xml
athena_behavior_tree/: CMakeLists.txt  (+1 more)
athena_msgs/: CMakeLists.txt  package.xml
athena_msgs/msg/: Execution.msg  Method.msg  Plan.msg
athena_planner/: .gitignore  CMakeLists.txt  README.md  package.xml  planners_plugin.xml
athena_planner/Planners/LPG-td-1.4/: ProblemNumerical.pddl  ProblemProva.pddl  ProblemSimple.pddl  plan_ProblemProva.pddl_1.SOL  plan_ProblemSimple.pddl_1.SOL
athena_planner/Planners/Metric-FF-v2.1/: ff
athena_planner/Planners/Metric-FF-v2.1/ExampleParser/: Domain.txt  Plan.txt
athena_planner/Planners/Metric-FF-v2.1/Examples/: Domain2.pddl  DomainTemporal.pddl  Problem.pddl  Problem2.pddl  ProblemTemporal.pddl
athena_planner/include/athena_planner/planners/: lpg.hpp  metric_ff.hpp  tfd.hpp
athena_planner/params/: planning_params.yaml
athena_planner/src/: main.cpp  task_planner_server.cpp
athena_planner/src/planners/: lilotane.cpp  lpg.cpp  metric_ff.cpp  tfd.cpp
athena_planner/test/: test_lpg_planner.cpp  test_metric_ff_planner.cpp
base/athena_common/: CMakeLists.txt  athena_common-extras.cmake  package.xml
base/athena_common/cmake/: athena_package.cmake
execution/athena_bt_executor/: CMakeLists.txt  package.xml
execution/athena_bt_executor/include/athena_bt_executor/: action_executor.hpp  bt_action_executor.hpp  bt_executor.hpp  executor.hpp  method_executor.hpp
execution/athena_bt_executor/include/athena_execution_bt_executor/: bt_executor.hpp
execution/athena_bt_executor/src/: action_executor.cpp  bt_action_executor.cpp  bt_executor.cpp  main.cpp  main_action.cpp  method_executor.cpp
execution/athena_exe_behavior_tree/: CMakeLists.txt  package.xml
execution/athena_exe_behavior_tree/behavior_trees/: athena_execution_tree_nodes.xml  execution.xml  execution_panda.xml  planning_w_execution.xml  planning_w_execution_hddl.xml
execution/athena_exe_behavior_tree/plugins/action/: noop_action.cpp  send_dump_action.cpp  send_load_action.cpp  send_move_action.cpp  send_transport_action.cpp
execution/athena_exe_behavior_tree/plugins/condition/: is_pile_moved_condition.cpp
execution/athena_exe_behavior_tree/plugins/control/: move_pile_method_node.cpp
plan2_bt_planner/: CMakeLists.txt  README.md  package.xml
plan2_bt_planner/include/plan2_bt_planner/: bt_planner.hpp  planner.hpp
plan2_bt_planner/include/plan2_bt_planner/planners/: task_planner.hpp
plan2_bt_planner/src/: bt_planner.cpp  main.cpp
plan2_bt_planner/src/planners/: task_planner.cpp
plan2_msgs/: CMakeLists.txt  package.xml
plan2_msgs/action/: ComputePlan.action
plan2_msgs/msg/: Action.msg  Plan.msg
plan2_msgs/srv/: GetPlan.srv  RecomputePlan.srv
plan2_planner/: .gitignore  CMakeLists.txt  package.xml  plan2_popf_plan_solver_plugin.xml  planners_plugin.xml
plan2_planner/include/plan2_planner/: planner_server.hpp  popf_plan_solver.hpp  task_planner_server.hpp
plan2_planner/include/plan2_planner/planners/: lilotane.hpp  lpg.hpp  metric_ff.hpp  tfd.hpp
plan2_planner/params/: planning_params.yaml
plan2_planner/src/: main.cpp  planner_server.cpp  popf_plan_solver.cpp  task_planner_server.cpp
plan2_planner/src/planners/: lilotane.cpp  lpg.cpp  metric_ff.cpp  tfd.cpp
plan2_planner/test/: test_lpg_planner.cpp  test_metric_ff_planner.cpp
plan2_protobuf/: .gitignore  CMakeLists.txt  ConcurrentPlan.txt  build.gradle  package.xml  plan.pddl  settings.gradle
plan2_protobuf/include/plan2_protobuf/: action.hpp  execution_plan.hpp  executionplan.pb.h  method.hpp
plan2_protobuf/src/: action.cpp  execution_plan.cpp  method.cpp
plan2_protobuf/src/main/proto/: CMakeLists.txt  executionplan.proto
plan2_protobuf/test/: plan_reader.cpp
plan2_util/: CMakeLists.txt  package.xml
plan2_util/include/plan2_util/: geometry_utils.hpp  lifecycle_node.hpp  lifecycle_service_client.hpp  lifecycle_utils.hpp  node_thread.hpp  node_utils.hpp  odometry_utils.hpp  robot_utils.hpp  service_client.hpp  simple_action_server.hpp  string_utils.hpp
plan2_util/src/: lifecycle_bringup_commandline.cpp  lifecycle_node.cpp  lifecycle_service_client.cpp  lifecycle_utils.cpp  node_thread.cpp  node_utils.cpp  odometry_utils.cpp  robot_utils.cpp  string_utils.cpp
planning/athena_bt_planner/: CMakeLists.txt  package.xml
planning/athena_bt_planner/include/athena_bt_planner/: bt_planner.hpp  planner.hpp
planning/athena_bt_planner/include/athena_bt_planner/planners/: task_planner.hpp
planning/athena_bt_planner/src/: bt_planner.cpp  main.cpp
planning/athena_bt_planner/src/planners/: task_planner.cpp
planning/athena_msgs/: CMakeLists.txt
planning/athena_msgs/action/: ComputePlan.action  ExecuteAction.action  ExecuteMethod.action  OptmizePlan.action  UpdateState.action
planning/athena_msgs/msg/: Action.msg  Method.msg  PlanningProblem.msg  State.msg
planning/athena_msgs/srv/: DetectObjects.srv  GenerateProblemFile.srv  GetPlan.srv  RecomputePlan.srv
planning/athena_planner/: CMakeLists.txt  package.xml  state_updaters_plugin.xml
planning/athena_planner/Planners/LPG-td-1.4/: DomainNumerical.pddl  DomainSimple.pddl  plan_ProblemNumerical.pddl_1.SOL
planning/athena_planner/Planners/Metric-FF-v2.1/ExampleParser/: Problem.txt
planning/athena_planner/Planners/Metric-FF-v2.1/Examples/: Domain.pddl
planning/athena_planner/include/athena_planner/: state_updater_server.hpp  task_planner_server.hpp
planning/athena_planner/include/athena_planner/planners/: lilotane.hpp  lpg.hpp  metric_ff.hpp  tfd.hpp
planning/athena_planner/include/athena_planner/state_updaters/: simple_state_updater.hpp  vlm_state_updater.hpp
planning/athena_planner/src/: main_state_updater.cpp  state_updater_server.cpp  task_planner_server.cpp
planning/athena_planner/src/planners/: lilotane.cpp  lpg.cpp  metric_ff.cpp  tfd.cpp
planning/athena_planner/src/state_updaters/: simple_state_updater.cpp  vlm_state_updater.cpp  vlm_state_updater.py
planning/athena_planner/test/: CMakeLists.txt  test_lpg_planner.cpp  test_metric_ff_planner.cpp
(+288 files in other folders)
