<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>athena</name>
  <version>0.0.1</version>
  <description>Athena: a ROS2 Planning System</description>
  <maintainer email="paolo.forte@oru.se">pofe</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>athena_behavior_tree</exec_depend>
  <exec_depend>athena_bt_planner</exec_depend>
  <exec_depend>athena_core</exec_depend>
  <exec_depend>athena_launch</exec_depend>
  <exec_depend>athena_lifecycle_manager</exec_depend>
  <exec_depend>athena_msgs</exec_depend>
  <exec_depend>athena_planner</exec_depend>
  <exec_depend>athena_protobuf</exec_depend>
  <exec_depend>athena_util</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
