<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plan2_planner</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="paolo.forte@oru.se">Paolo Forte</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>plan2_core</depend>
  <depend>pluginlib</depend>
  <depend>ament_index_cpp</depend>
  <exec_depend>popf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros2run</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
    <plan2_core plugin="${prefix}/plan2_popf_plan_solver_plugin.xml" />
  </export>
</package>
