<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>athena_common</name>
  <version>0.0.0</version>
  <description>Common support functionality used throughout the athena framework</description>
  <maintainer email="paolo.forte@oru.se">Paolo Forte</maintainer>
  <license>TODO: License declaration</license>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>osrf_pycommon</depend>
  <depend>rclpy</depend>
  <depend>python3-yaml</depend>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <build_depend>ament_cmake_python</build_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
