<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>athena_exe_behavior_tree</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
 <maintainer email="paolo.forte@oru.se">Paolo Forte</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>behaviortree_cpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>athena_util</depend>
  <depend>lifecycle_msgs</depend>
  <depend>nav2_common</depend>
  <depend>athena_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>athena_behavior_tree</depend>
  <depend>athena_exe_msgs</depend>
  <depend>material_handler_msgs</depend>
  <depend>nav2_costmap_2d</depend>


  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
