<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>athena_bt_planner</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="paolo.forte@oru.se">Paolo Forte</maintainer>
  <license>GPL-3.0-only</license>

  <depend>tf2_ros</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav2_common</build_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>athena_util</depend>
  <depend>athena_core</depend>
  <depend>athena_msgs</depend>
  <depend>athena_behavior_tree</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
