add_compile_options(-std=c++17)
INCLUDE(FindProtobuf)
find_package(Protobuf CONFIG REQUIRED)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER executionplan.proto)
add_library(proto SHARED ${PROTO_HEADER} ${PROTO_SRC})
ament_target_dependencies(proto Protobuf)
#target_link_libraries(proto ${Protobuf_LIBRARIES} protobuf::libprotobuf)
target_link_libraries(proto ${Protobuf_LIBRARIES})